# Nursy

./: .gitignore  pyproject.toml  requirements.txt
api/agents/: chat_agent.py  verification_agent.py
api/communication/lib/: prompts.py
api/console/: main.py
api/lex/: extractor.py
api/lex/parsers/: anamnesis_parser.py
api/server/: app.py  web_socket_manager.py
api/server/routes/: anamnesis.py
app/agents/: chat_agent.py  verification_agent.py
app/communication/lib/: prompts.py  response.py
app/console/: main.py
app/lex/: extractor.py
app/lex/parsers/: anamnesis_parser.py
app/server/: app.py  auth.py  web_socket_manager.py
console_chat/: generate_jwt.py  main.py
server/: alembic.ini  console.py  main.py  pyproject.toml  test.py
server/migrations/: env.py
server/src/: main.py
server/src/agents/: chat_agent.py  verification_agent.py
server/src/communication/: communication.py
server/src/communication/lib/: prompts.py  response.py
server/src/iqs_api/db/: database.py  models.py  user_crud.py
server/src/iqs_api/hooks/: on_current_user.py  on_db.py  on_queue.py  on_role.py  use_db.py  use_queue.py
server/src/iqs_api/jwt/: utils.py
server/src/iqs_api/routers/: admin_router.py  admin_schema.py  auth_router.py  auth_schema.py  chat_router.py  chat_schema.py  queue_router.py
server/src/iqs_api/tests/: test_chat_router.py  test_queue_router.py
server/src/iqs_chat/: chat.py
server/src/iqs_ws/: participant.py  queue.py
server/src/lex/: extractor.py  parser.py  regex_patterns.py
server/src/lex/lib/: regex.py
server/src/lex/modules/: anamnesis_parser.py  response_parser.py
server/src/lex/parsers/: anamnesis_parser.py
server/src/models/: base.py
src/: main.py
src/agents/: chat_agent.py  verification_agent.py
src/communication/: communication.py
src/communication/lib/: prompts.py  response.py
src/lex/: extractor.py
src/lex/lib/: regex.py
src/verification/: verifier.py
web/: README.md  package-lock.json  package.json  tailwind.config.ts
web/src/: APIEndpoints.ts  App.tsx  index.css
web/src/app/: layout.tsx  page.tsx
web/src/app/about-us/: page.tsx
web/src/app/admin/: page.tsx
web/src/app/admin/auth/: page.tsx
web/src/app/api/admin/: route.ts
web/src/app/api/admin/auth/: route.ts
web/src/app/api/admin/call_participant/[session_id]/: route.ts
web/src/app/api/chat/: route.tsx
web/src/app/api/chat/[conversationId]/: route.ts
web/src/app/api/chat/[conversationId]/stream/: route.ts
web/src/app/api/chat/[sessionId]/: route.ts
web/src/app/api/chat/init/: route.ts
web/src/app/api/chat/init/[sessionId]/: route.ts
web/src/app/api/queue/: route.ts
web/src/app/api/queue/participant/[sessionId]/: route.ts
web/src/app/api/queue/register/[sessionId]/: route.ts
web/src/app/chat/: page.tsx
web/src/app/chat/[sessionId]/: page.tsx
web/src/app/queue/: page.tsx
web/src/app/queue/[sessionId]/: page.tsx
web/src/components/: Chat.tsx
web/src/components/admin/auth/: AuthButton.tsx  AuthLayout.tsx  InputField.tsx  LogoutButton.tsx
web/src/components/admin/home/: AnamnesisEntry.tsx  ParticipantAdminComunicator.tsx  ParticipantDetails.tsx  ParticipantHeader.tsx  ParticipantProblem.tsx  ParticipantRow.tsx  ParticipantTriageFlag.tsx  ParticipantsList.tsx
web/src/components/admin/navigation/: AdminNavigator.tsx  AdminToggleMenu.tsx
web/src/components/buttons/: JoinQueueButton.tsx  RedirectButton.tsx
web/src/components/chat/: AssistantPrepCard.tsx  ChatHeader.tsx  Composer.tsx  MessageBuble.tsx  MessageList.tsx
web/src/components/general/: Icons.tsx  MinimalFooter.tsx  MinimalLogo.tsx  Navigator.tsx  SystemBadges.tsx  ToggleMenu.tsx
web/src/components/general/layouts/: BasicSiteLayout.tsx  ChatSiteLayout.tsx  ParticipantSiteLayout.tsx  Section.tsx
web/src/components/landing/: AppBar.tsx  CtaSection.tsx  FeatureCard.tsx  FeatureSection.tsx  Footer.tsx  Hero.tsx  InfoSection.tsx  JoinQueueButton.jsx  Logo.tsx
web/src/components/queue/: PublicTicketCard.tsx  QueueGrid.tsx
web/src/components/queue/personal/: Caller.tsx  ChatHistory.tsx  PersonalTicketCard.tsx  StatusHeader.tsx  StatusSection.tsx
web/src/hooks/: useAdminData.ts  useJwt.ts  useParticipant.ts  useSessionId.ts
web/src/lib/: nurseFlow.tsx
web/src/types/: chat.tsx  primitive.ts  schema.ts
